fixed image links

--- a/recipes/freshsalsa.html
+++ b/recipes/freshsalsa.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Fresh Salsa</h1>
-    <img src="../recipes/salsa.jpg" alt="bowl of salsa">
+    <img src="./images/salsa.jpg" alt="bowl of salsa">
     <h3>Description</h3>
     <p>Chips and salsa are a go-to in our house. A fresh bowl of salsa is a great snack or side dish.</p>
     <p>A great thing about salsa is you can adjust it to make it as spicy as you would like.</p>
