fixed image link again

--- a/recipes/barbecups.html
+++ b/recipes/barbecups.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Barbecups</h1>
-    <img src="./images/barbecups.jpg" alt="biscuit with meat in it">
+    <img src="../images/barbecups.jpg" alt="biscuit with meat in it">
     <h3>Description</h3>
     <p>Barbecups are a delicious dinner the whole family will enjoy. A quick choice for busy nights.</p>
     <p>Warm, flaky biscuits with a savory filling of barbecue flavored meat which can be enjoyed with a side of salad and fries.</p>
