--- a/recipes/poundcake.html
+++ b/recipes/poundcake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Granny's Poundcake</h1>
-    <img src="./images/poundcake.jpg" alt="delicious poundcake">
+    <img src="../images/poundcake.jpg" alt="delicious poundcake">
     
     <h2>Description</h2>
     <p>A delicious, southern staple. Sweet cake with crust that falls right off. Top it off with fresh, cold strawberries and whipped cream for a tasty dessert.</p>
